--- a/js/index-old.html
+++ b/js/index-old.html
@@ -252,10 +252,10 @@
             <a href="#" class="button button--main">Ver todos los cursos</a>
         </section> <!-- List of Courses -->
         <section class="register">
-            <div class="box box--center">
-                <article class="register__testimonial text-center">
-                    <strong>ALGUNOS ESTUDIANTES CUENTAN SU EXPERIENCIA</strong>
-                    <h3>Yan Vallejo</h3>
+            <div class="box">
+                <article class="register__testimonial">
+                    <h4>ALGUNOS ESTUDIANTES CUENTAN SU EXPERIENCIA</h4>
+                    <h6>Yan Vallejo</h6>
                     <span>Bootstrap lo mejor 1</span>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat</p>
                 </article>
