Finish Class number 16

--- a/index.html
+++ b/index.html
@@ -262,6 +262,32 @@
                     </div>
                 </footer>
             </article>
+            <a href="#" class="button button--main">Ver todos los cursos</a>
+        </section>
+        <section class="register">
+            <div class="box box--center">
+                <article class="register__testimonial">
+                    <strong>ALGUNOS ESTUDIANTES CUENTAN SU EXPERIENCIA</strong>
+                    <div class="register__user">
+                        <figure class="sin-margin">
+                            <img src="img/yan-arlex-vallejo.jpg" alt="">
+                        </figure>
+                        <div class="register__information">
+                            <h3>Yan Vallejo</h3>
+                            <span>Bootstrap lo mejor 1</span>
+                        </div>
+                    </div>
+                    <p>orem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat</p>
+                </article>
+                <article class="register__newsletter">
+                    <strong>REGISTRARTE AHORA</strong>
+                    <p>Obten acceso a mas de 30 cursos, 100 horas de video, 30 proyectos practicos e información semanal via newsletter.</p>
+                    <form action="#" class="text-center">
+                        <input type="text" name="correo" id="correo" placeholder="example@gmail.com">
+                        <input type="submit" value="Suscribirse" class="button button--main">
+                    </form>
+                </article>
+            </div>
         </section>
     </main>
 
