--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
                 </div>
             </div>
-        </section><!-- Slider -->
+        </section> <!-- Slider -->
         <section class="youtube-analytics">
             <div class="youtube-analytics__date box">
                 <img src="img/youtube-suscriptores.png" alt="Youtube Aprendiendoando" width="119" height="119">
@@ -81,8 +81,9 @@
             </div>
             <p class="youtube-analytics__information">
                 Dan su visto bueno a nuestros cursos, la claridad con que se abordan los temas, y la manera practica de exponer la información.
-                <strong> 120 Cursos, 360 horas, 19 Proyectos </strong> el deseo de enseñar son el complemento perfecto para dar contenido de calidad.
-            </div>
+                <strong> 120 Cursos, 360 horas, 19 Proyectos </strong> el deseo de enseñar son el complemento perfecto para
+                dar contenido de calidad.
+                </div>
         </section><!-- Youtube Analytics -->
         <section class="box box__courses">
             <article class="box__courses--one">
@@ -103,7 +104,7 @@
                     <p>Últimos lanzamientos</p>
                 </div>
             </article>
-        </section> <!-- Courses Box -->
+        </section><!-- Best Courses -->
         <section class="box list-courses">
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
@@ -113,7 +114,9 @@
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <a href="#" class="decoration-none">
+                        <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
+                    </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
@@ -137,7 +140,9 @@
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <a href="#" class="decoration-none">
+                        <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
+                    </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
@@ -161,7 +166,9 @@
                     <figcaption class="price price--premiun">Premium - $ 10</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <a href="#" class="decoration-none">
+                        <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
+                    </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
@@ -185,7 +192,9 @@
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <a href="#" class="decoration-none">
+                        <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
+                    </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
@@ -209,7 +218,9 @@
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <a href="#" class="decoration-none">
+                        <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
+                    </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
@@ -233,7 +244,9 @@
                     <figcaption class="price price--premiun">Premium - $ 10</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none"><h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3></a>
+                    <a href="#" class="decoration-none">
+                        <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
+                    </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
@@ -250,27 +263,52 @@
                 </footer>
             </article>
             <a href="#" class="button button--main">Ver todos los cursos</a>
-        </section> <!-- List of Courses -->
+        </section><!-- List of courses -->
         <section class="register">
             <div class="box box--center">
-                <article class="register__testimonial text-center">
+                <article class="register__testimonial">
                     <strong>ALGUNOS ESTUDIANTES CUENTAN SU EXPERIENCIA</strong>
-                    <h3>Yan Vallejo</h3>
-                    <span>Bootstrap lo mejor 1</span>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat</p>
+                    <div class="register__user">
+                        <figure class="sin-margin">
+                            <img src="img/yan-arlex-vallejo.jpg" alt="">
+                        </figure>
+                        <div class="register__information">
+                            <h3>Yan Vallejo</h3>
+                            <span>Bootstrap lo mejor 1</span>
+                        </div>
+                    </div>
+                    <p>orem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                        et dolore magna aliquyam erat</p>
                 </article>
-                <article class="article register__newsletter">
-                    <h4>REGISTRARTE AHORA</h4>
-                    <p>Obten acceso a mas de 30 cursos, 100 horas de video, 30 proyectos practicos e información semanal via newsletter.</p>
-                    <form action="#">
-                        <input type="text" name="correo" placeholder="example@gmail.com">
-                        <input type="submit" value="suscribirse" class="button button--main">
+                <article class="register__newsletter">
+                    <strong>REGISTRARTE AHORA</strong>
+                    <p>Obten acceso a mas de 30 cursos, 100 horas de video, 30 proyectos practicos e información semanal via
+                        newsletter.</p>
+                    <form action="#" class="text-center">
+                        <input type="text" name="correo" id="correo" placeholder="example@gmail.com">
+                        <input type="submit" value="Suscribirse" class="button button--main">
                     </form>
                 </article>
             </div>
-        </section>
+        </section><!-- Register and testimonials -->
     </main>
-    
+    <footer class="box footer">
+        <figure class="sin-margin">
+            <a href="#">
+                <img src="img/aprendiendoando.png" alt="AprendiendoAndo">
+            </a>
+        </figure>
+        <div class="footer__mail">
+            <i class="aprendiendoando-correo"></i>
+            <a class="decoration-none" href="#">yan@aprendiendoando.com</a>
+        </div>
+        <ul class="list-none">
+            <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
+            <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
+            <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
+            <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
+        </ul>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
@@ -282,8 +320,8 @@
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
             (function (b, o, i, l, e, r) {
-            b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-                function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+                b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                    function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
                 e = o.createElement(i); r = o.getElementsByTagName(i)[0];
                 e.src = 'https://www.google-analytics.com/analytics.js';
                 r.parentNode.insertBefore(e, r)
