Ajustes para continuar con la version sin grabar en Youtube

--- a/index.html
+++ b/index.html
@@ -289,7 +289,27 @@
                 </article>
             </div>
         </section>
-    </main>
+    </main> <!-- Main -->
+    <footer class="footer box">
+        <figure class="sin-margin">
+            <a href="#">
+                <img src="img/aprendiendoando.png" alt="AprendiendoAndo" width="223" height="">
+            </a>
+        </figure>
+        <div class="footer__mail">
+            <i class="aprendiendoando-correo"></i>
+            <a class="decoration-none" href="#">yan@aprendiendoando.com</a>
+        </div>
+        <ul class="list-none">
+            <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
+            <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
+            <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
+            <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
+        </ul>
+    </footer> <!-- Footer -->
+
+
+
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
