--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="es">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -32,29 +31,29 @@
                 </div>
                 <div class="header__rs">
                     <ul class="list-none">
-                        <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
-                        <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
-                        <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
-                        <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
+                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a></li>
+                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a></li>
+                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a></li>
+                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a></li>
                     </ul>
                 </div>
-            </div>
+            </div> <!-- End Header Top -->
             <div class="header__bottom">
                 <div class="logo">
                     <a href="#">
                         <img src="img/aprendiendoando.png" alt="Aprendiendoando" width="436" height="72">
                     </a>
-                </div>
+                </div> <!-- End Logo -->
                 <nav class="nav__main">
-                    <ul class="list-none">
-                        <li><a class="decoration-none active" href="#">Inicio</a></li>
-                        <li><a class="decoration-none" href="#">Cursos</a></li>
-                        <li><a class="decoration-none" href="#">Acerca De</a></li>
-                        <li><a class="decoration-none" href="#">Blog</a></li>
-                        <li><a class="decoration-none" href="#">Contacto</a></li>
+                    <ul class="list-none snip1135">
+                        <li><a class="decoration-none current" href="#" data-hover="Inicio">Inicio</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Cursos">Cursos</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Acerca De">Acerca De</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Blog">Blog</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Contacto">Contacto</a></li>
                     </ul>
-                </nav>
-            </div>
+                </nav> <!-- End Nav Main -->
+            </div> <!-- End Header Bottom -->
         </div>
     </header>
     <main class="main">
@@ -70,12 +69,14 @@
                     <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
                 </div>
             </div>
-        </section>
+        </section> <!-- End Slider -->
         <section class="youtube-analytics">
             <div class="youtube-analytics__date box">
-                <img src="img/youtube-suscriptores.png" alt="Youtube Aprendiendoando" width="119" height="119">
+                <figure>
+                    <img src="img/youtube-suscriptores.png" alt="Youtube Aprendiendoando" width="119" height="119">
+                </figure>
                 <div class="youtube-analytics__number">
-                    <span>12000</span>
+                    <span>12030</span>
                     <strong>< Suscriptores /></strong>
                 </div>
             </div>
@@ -84,7 +85,7 @@
                 <strong> 120 Cursos, 360 horas, 19 Proyectos </strong> el deseo de enseñar son el complemento perfecto para
                 dar contenido de calidad.
                 </div>
-        </section>
+        </section> <!-- End Youtube -->
         <section class="box box__courses">
             <article class="box__courses--one">
                 <figure>
@@ -94,7 +95,7 @@
                     <h4>Cursos <br> Populares</h4>
                     <p>Los mas visto, y mejor calificados</p>
                 </div>
-            </article>
+            </article> <!-- End Courses one -->
             <article class="box__courses--one box__courses--dos">
                 <figure>
                     <img src="img/lo-mas-reciente.png" alt="" width="103" height="118">
@@ -103,8 +104,8 @@
                     <h4>Los más <br>Recientes</h4>
                     <p>Últimos lanzamientos</p>
                 </div>
-            </article>
-        </section>
+            </article> <!-- End Courses two -->
+        </section> <!-- End Courses -->
         <section class="box list-courses">
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
@@ -263,11 +264,11 @@
                 </footer>
             </article>
             <a href="#" class="button button--main">Ver todos los cursos</a>
-        </section>
+        </section> <!-- End List Courses -->
         <section class="register">
             <div class="box box--center">
                 <article class="register__testimonial">
-                    <strong>ALGUNOS ESTUDIANTES CUENTAN SU EXPERIENCIA</strong>
+                    <strong class="text--uppercase">algunos estudiantes cuentan su experiencia</strong>
                     <div class="register__user">
                         <figure class="sin-margin">
                             <img src="img/yan-arlex-vallejo.jpg" alt="">
@@ -277,7 +278,7 @@
                             <span>Bootstrap lo mejor 1</span>
                         </div>
                     </div>
-                    <p>orem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat</p>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat</p>
                 </article>
                 <article class="register__newsletter">
                     <strong>REGISTRARTE AHORA</strong>
@@ -288,8 +289,8 @@
                     </form>
                 </article>
             </div>
-        </section>
-    </main> <!-- Main -->
+        </section> <!-- End Register -->
+    </main> <!-- End Main -->
     <footer class="footer box">
         <figure class="sin-margin">
             <a href="#">
@@ -306,9 +307,9 @@
             <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
             <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
         </ul>
-    </footer> <!-- Footer -->
+    </footer> <!-- end Footer -->
 
-
+    <!-- Scripts -->
 
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
