--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>AprendiendoAndo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -45,7 +45,7 @@
                     </a>
                 </div> <!-- End Logo -->
                 <nav class="nav__main">
-                    <ul class="list-none snip1135">
+                    <ul class="list-none nav__top">
                         <li><a class="decoration-none current" href="#" data-hover="Inicio">Inicio</a></li>
                         <li><a class="decoration-none" href="#" data-hover="Cursos">Cursos</a></li>
                         <li><a class="decoration-none" href="#" data-hover="Acerca De">Acerca De</a></li>
@@ -63,7 +63,7 @@
                 <div class="slider__left">
                     <h2 class="title title--big">¿Que quieres aprender hoy?</h2>
                     <h4 class="title title--small">Todo esto encontraras en <strong>Aprendiendoando</strong></h4>
-                    <a href="#" class="button button--main">Ver todos los cursos</a>
+                    <a href="#" class="button button--main ml-0">Ver todos los cursos</a>
                 </div>
                 <div class="slider__right">
                     <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
@@ -263,8 +263,8 @@
                     </div>
                 </footer>
             </article>
-            <a href="#" class="button button--main">Ver todos los cursos</a>
         </section> <!-- End List Courses -->
+            <a href="#" class="button button--main mb-5">Ver todos los cursos</a>
         <section class="register">
             <div class="box box--center">
                 <article class="register__testimonial">
@@ -301,7 +301,7 @@
             <i class="aprendiendoando-correo"></i>
             <a class="decoration-none" href="#">yan@aprendiendoando.com</a>
         </div>
-        <ul class="list-none">
+        <ul class="list-none redes_sociales">
             <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
             <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
             <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
