--- a/index.html
+++ b/index.html
@@ -31,10 +31,26 @@
                 </div>
                 <div class="header__rs">
                     <ul class="list-none">
-                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a></li>
-                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a></li>
-                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a></li>
-                        <li><a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a></li>
+                        <li>
+                            <a class="decoration-none" href="https://twitter.com/yavallejo" title="Twitter Yan Arlex Vallejo" target="_blank">
+                                <i class="aprendiendoando-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-none" href="https://facebook.com/aprendiendoando" title="Facebook AprendiendoAndo" target="_blank">
+                                <i class="aprendiendoando-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-none" href="https://www.youtube.com/aprendiendoando" title="Youtube Aprendiendoando" target="_blank">
+                                <i class="aprendiendoando-youtube"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="decoration-none" href="http://www.aprendiendoando.com/" title="RSS Aprendiendoando" target="_blank">
+                                <i class="aprendiendoando-rss"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div> <!-- End Header Top -->
@@ -88,22 +104,28 @@
         </section> <!-- End Youtube -->
         <section class="box box__courses">
             <article class="box__courses--one">
-                <figure>
-                    <img src="img/cursos-populares.png" alt="" width="103" height="118">
-                </figure>
-                <div>
-                    <h4>Cursos <br> Populares</h4>
-                    <p>Los mas visto, y mejor calificados</p>
-                </div>
+                <a href="#">
+                    <figure>
+                        <img src="img/cursos-populares.png" alt="" width="103" height="118">
+                    </figure>
+                    <div>
+                        <h4>Cursos
+                            <br> Populares</h4>
+                        <p>Los mas visto, y mejor calificados</p>
+                    </div>
+                </a>
             </article> <!-- End Courses one -->
             <article class="box__courses--one box__courses--dos">
-                <figure>
-                    <img src="img/lo-mas-reciente.png" alt="" width="103" height="118">
-                </figure>
-                <div>
-                    <h4>Los más <br>Recientes</h4>
-                    <p>Últimos lanzamientos</p>
-                </div>
+                <a href="#">
+                    <figure>
+                        <img src="img/lo-mas-reciente.png" alt="" width="103" height="118">
+                    </figure>
+                    <div>
+                        <h4>Los más
+                            <br>Recientes</h4>
+                        <p>Últimos lanzamientos</p>
+                    </div>
+                </a>
             </article> <!-- End Courses two -->
         </section> <!-- End Courses -->
         <section class="box list-courses">
@@ -301,11 +323,27 @@
             <i class="aprendiendoando-correo"></i>
             <a class="decoration-none" href="#">yan@aprendiendoando.com</a>
         </div>
-        <ul class="list-none">
-            <a class="decoration-none" href="#"><i class="aprendiendoando-twitter"></i></a>
-            <a class="decoration-none" href="#"><i class="aprendiendoando-facebook"></i></a>
-            <a class="decoration-none" href="#"><i class="aprendiendoando-youtube"></i></a>
-            <a class="decoration-none" href="#"><i class="aprendiendoando-rss"></i></a>
+        <ul class="list-none d-flex">
+            <li>
+                <a class="decoration-none" href="https://twitter.com/yavallejo" title="Twitter Yan Arlex Vallejo" target="_blank">
+                    <i class="aprendiendoando-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a class="decoration-none" href="https://facebook.com/aprendiendoando" title="Facebook AprendiendoAndo" target="_blank">
+                    <i class="aprendiendoando-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a class="decoration-none" href="https://www.youtube.com/aprendiendoando" title="Youtube Aprendiendoando" target="_blank">
+                    <i class="aprendiendoando-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a class="decoration-none" href="http://www.aprendiendoando.com/" title="RSS Aprendiendoando" target="_blank">
+                    <i class="aprendiendoando-rss"></i>
+                </a>
+            </li>
         </ul>
     </footer> <!-- end Footer -->
 
