--- a/cursos.html
+++ b/cursos.html
@@ -72,37 +72,14 @@
             </div> <!-- End Header Bottom -->
         </div>
     </header>
-    <main class="main">
-        <section class="slider">
-            <div class="overlay"></div>
-            <div class="box slider__information">
-                <div class="slider__left">
-                    <h2 class="title title--big">¿Que quieres aprender hoy?</h2>
-                    <h4 class="title title--small">Todo esto encontraras en <strong>Aprendiendoando</strong></h4>
-                    <a href="#" class="button button--main ml-0">Ver todos los cursos</a>
-                </div>
-                <div class="slider__right">
-                    <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
-                </div>
-            </div>
-        </section> <!-- End Slider -->
-        <section class="youtube-analytics">
-            <div class="youtube-analytics__date box">
-                <figure>
-                    <img src="img/youtube-suscriptores.png" alt="Youtube Aprendiendoando" width="119" height="119">
-                </figure>
-                <div class="youtube-analytics__number">
-                    <span>12030</span>
-                    <strong>< Suscriptores /></strong>
-                </div>
-            </div>
-            <p class="youtube-analytics__information">
-                Dan su visto bueno a nuestros cursos, la claridad con que se abordan los temas, y la manera practica de exponer la información.
-                <strong> 120 Cursos, 360 horas, 19 Proyectos </strong> el deseo de enseñar son el complemento perfecto para
-                dar contenido de calidad.
-                </div>
-        </section> <!-- End Youtube -->
-        <section class="box box__courses">
+    <aside class="ap-breadcrumbs">
+        <div class="box">
+            <h1 class="title--main">Cursos</h1>
+        </div>
+    </aside>
+    <main class="main mt-0">
+
+       <section class="box box__courses box__courses--intern">
             <article class="box__courses--one">
                 <a href="#">
                     <figure>
