Courses Page beta 1.0

--- a/cursos.html
+++ b/cursos.html
@@ -105,6 +105,28 @@
                 </a>
             </article> <!-- End Courses two -->
         </section> <!-- End Courses -->
+        <aside class="box filterCourses">
+            <form action="" class="filterCourses__form">
+                <div class="filterCourses__select">
+                    <select name="" id="">
+                        <option value="Seleccione">Seleccione</option>
+                        <option value="Seleccione">Desarrollo Web</option>
+                        <option value="Seleccione">Desarrollo Mobile</option>
+                        <option value="Seleccione">Programación para niños</option>
+                    </select>
+                </div>
+                <div class="filterCourses__tags">
+                    <span>Etiquetas: </span>
+                    <ul class="ap-tags list-none">
+                        <li><a href="#">Diseño Web</a></li>
+                        <li><a href="#">Bootstrap</a></li>
+                        <li><a href="#">SublimeText</a></li>
+                        <li><a href="#">Css</a></li>
+                    </ul>
+                </div>
+            </form>
+
+        </aside>
         <section class="box list-courses">
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
